nu har vi en login sida

--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -5,10 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<h1>MY PAGE</h1>
 <div>
-<form method="post" action="/login">
-    <input type="text"  name="email" placeholder="username">
-    <input type ="password" name="password" placeholder="password">
+<form>
+    <input type="text"  name="email" placeholder="Username">
+    <input type ="password" name="password" placeholder="Password">
     <button type="submit">LOGIN</button>
     <a button type="submit" href="/userpage">CREATE USER</button> </a>
 </form>
