--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,16 +2,94 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Trejd</title>
 </head>
 <body>
+<!--This area is going to be styled to the green in the header class but how-->
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom ">
+   <div class="container">
+        <a href="#" class="navbar-brand">TREJD</a>
+
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+           <span class="navbar-toggler-icon"></span>
+       </button>
+
+       <div class="collapse navbar-collapse" id="navmenu">
+           <ul class="navbar-nav ms-auto">
+               <li class="nav-item">
+                   <a href="#home" class="nav-link">HOME</a>
+               </li>
+               <li class="nav-item">
+                   <a href="#trejd" class="nav-link">Start Trejding</a>
+               </li>
+               <li class="nav-item">
+                   <a href="#offerlist" class="nav-link">Offers</a>
+               </li>
+           </ul>
+           </div>
+   </div>
+   </nav>
+<!--This is the section after the navbar-->
+<section class="bg-dark.text-light.p-5 text-center">
+    <div class="container">
+        <div class="d-sm-flex align-items-center">
+            <div>
+                <h1>LET'S START TREJDING</h1>
+            </div>
+            <img class="img-fluid w-50 d-none d-sm-block" src="" alt="logo">
+        </div>
+    </div>
+    </section>
+<!-- This section is going to be pink-->
+<section class="bg-primary text-light p-5">
+ <div class="container">
+     <div class="d-md-flex justify-content-between align-items-center">
+         <h3>THIS IS TO BE THE PINK SECTION</h3>
+         <div class="input-group">
+             <input type="email" class="form-control" placeholder="Email adress">
+             <input type="password" class="form-control" placeholder="Password">
+             <button type="button">SIGN IN</button>
+         </div>
+     </div>
+ </div>
+</section>
+<!-- THis is WHERE We CAN HAVE 4 of The Categories with a picture-->
+<section class="p-5">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md">
+                <div class="card bg-dark text-light">
+                <div class="card body text-center">
+
+                </div>
+                </div>
+            </div>
+            <div class="col-md">pic 2</div>
+            <div class="col-md">pic 3</div>
+            <div class="col-md">pic 4</div>
+        </div>
+    </div>
+
+</section>
+<!--
+
+<h2>TO BE DESIGNED LATER...</h2>
 <div>
-<form>
+<form action="" method="post">
     <input type="text"  name="email" placeholder="Username">
     <input type ="password" name="password" placeholder="Password">
     <button type="submit">LOGIN</button>
-    <a button type="submit" href="/userpage">CREATE USER</button> </a>
+    <button type="submit">CREATE USER</button>
 </form>
 </div>
+<div>
+    <form method="get" action="">
+        SEARCH FOR OFFERS
+    </form>
+
+</div>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
