--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<h1>MY PAGE</h1>
-<div>
-<form>
-    <input type="text"  name="email" placeholder="Username">
-    <input type ="password" name="password" placeholder="Password">
-    <button type="submit">LOGIN</button>
-    <a button type="submit" href="/userpage">CREATE USER</button> </a>
-</form>
+<div class="container-fluid">
+<div class="header">
+<h1 th:text="'Welcome ' + ${session.user.firstName} + '!'"></h1>
+    <nav>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#/home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/offerlist">Offers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/my-page">My Pages</a>
+            </li>
+        </ul>
+    </nav>
 </div>
+    </div>
+<div>
+    <h2>My Info</h2>
+    <form>
+        <input type="text" placeholder="First Name"></input>
+        <input type="text" placeholder="Last Name"></input>
+        <input type="email" placeholder="Email"></input>
+        <input type="password" placeholder="Password"></input>
+    </form>
+    <button type="submit" class="btn btn-primary">Uppdate my info</button>
+    <!--This button should open the fields of the above form which are hidden(.collapse) - uppdated info should be sent to the database -->
+</div>
+<div>
+    <form method="post" action="">
+        <h2>Create an order</h2>
+        <input type="text" placeholder="location">
+        <input type="text" placeholder="user"> <!--behövs den här??-->
+        <input type="text" placeholder="order">
+        <button type="submit" class="btn btn-primary"> OK </button>
+    </form>
+    </div>
+<div>
+    <h2>My previous Orders</h2>
+    <ul class="list-group">
+        <li class="list-group-item">First item</li>
+        <li class="list-group-item">Second item</li>
+        <li class="list-group-item">Third item</li>
+    </ul>>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+</div>
 </html>
