--- a/src/main/resources/templates/maketrejd.html
+++ b/src/main/resources/templates/maketrejd.html
@@ -24,8 +24,9 @@
         </div>
 
             <a class="trejdbutton" href="#">TREJD</a>
-            <button class="trejdbutton">trejd</button>
-
+        <form action="/maketrejd/{id}" method="post">
+            <button type="submit" class="trejdbutton">trejd</button>
+        </form>
     </div>
 
 
