--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -42,6 +42,7 @@
             <div class="border">
                 <img src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="150" width="auto">
                 <span th:text="${user.firstName}">NAME</span>
+                <span th:text="${user.location}">LOcation</span>
             </div></a>
         </div>
 
