--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -16,41 +16,8 @@
   <title>Create user</title>
 </head>
 <body>
-<form action="" method="post" class="mb-3" th:object="${user}">
-  <label for="FormInput1" class="form-label">First name</label>
-  <input type="text" th:field="*{firstName}" class="form-control" id="FormInput1" th:placeholder="${session.user.firstName}">
-
-  <label for="FormInput2" class="form-label">Last name</label>
-  <input type="text" th:field="*{lastName}" class="form-control" id="FormInput2" th:placeholder="${session.user.lastName}">
-
-  <label for="FormInput3" class="form-label">Email address</label>
-  <input type="email" th:field="*{email}" class="form-control" id="FormInput3" th:placeholder="${session.user.email}">
-
-  <label for="FormInput3" class="form-label">Location</label>
-  <input type="text" th:field="*{location}" id="location">
-  <button onclick="setLocation()">Get Location</button>
-  <input type="hidden" th:field="*{latitude}" id="latitude">
-  <input type="hidden" th:field="*{longitude}" id="longitude">
-  <label for="exampleDataList" class="form-label">Add skill</label>
-  <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-  <datalist id="datalistOptions">
-    <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
-  </datalist>
-  <!--div th:if>
-      <label for="exampleDataList2" class="form-label">Add second skill</label>
-      <input class="form-control" list="datalistOptions" id="exampleDataList2" placeholder="Type to search...">
-      <datalist id="datalistOptions2">
-          <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
-      </datalist>
-  </div-->
-  <label for="FormInput2" class="form-label">Description </label>
-  <input type="text" th:field="*{lastName}" class="form-control" id="FormInput4" th:placeholder="$session.user.lastName">
-
-  <div class="col-auto">
-    <button type="submit" class="btn btn-primary mb-3">Confirm</button>
-  </div>
-</form>
-<script src="geoScript.js"></script>
+<h1> Create ORder</h1>
+<p th:text="${session.firstname}">inloggad firstname</p>
 
 </body>
 </html>
