--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -1,21 +1,43 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
 
-
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap CSS -->
+    <title>Title</title>
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Create user</title>
 </head>
+
+
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom text-custom">
+    <div class="container">
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</div>
+</div>
+<div class="container text-custom mt-5">
 <form action="" method="post" class="mb-3" th:object="${user}">
     <label for="FormInput1" class="form-label">First name</label>
     <input type="text" th:field="*{firstName}" class="form-control" id="FormInput1" placeholder="First Name">
@@ -35,12 +57,12 @@
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
     <p id="demo"></p>
-
-    <label for="exampleDataList" class="form-label">Add skill</label>
-    <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-    <datalist id="datalistOptions">
-        <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
-    </datalist>
+<div class="mb-2">
+    <label class="form-label">Skill</label>
+    <select th:field="*{skillId}" class="form-select">
+        <option value="0" selected="selected">Choose skill</option>
+        <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
+</div>
 <!--div th:if>
     <label for="exampleDataList2" class="form-label">Add second skill</label>
     <input class="form-control" list="datalistOptions" id="exampleDataList2" placeholder="Type to search...">
@@ -52,7 +74,23 @@
         <button type="submit" class="btn btn-primary mb-3">Confirm</button>
     </div>
 </form>
-<button onclick="getLocation()">Get your location</button><button onclick="setLocation()">Set your location</button>
-<script src="geoScript.js"></script>
+    <div class = "mb-3">
+<button class="btn btn-secondary" onclick="getLocation()">Get your location</button>
+        <button class="btn btn-secondary" onclick="setLocation()">Set your location</button>
+</div>
+</div>
+    <script src="geoScript.js"></script>
 
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+    <div class="container">
+        <p class="lead"> Copyright &copy; 2022 Trejd</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1 icon-black" ></i>
+        </a>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="/geoScript.js"></script>
 </body>
+</html>
+
