--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -1,62 +1,87 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+
+
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Create user</title>
 </head>
+
 <body>
-<div class="container-fluid">
-<div class="header">
-<h1 th:text="'Welcome ' + ${session.user.firstName} + '!'"></h1>
-    <nav>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#/home">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#/offerlist">Offers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#/my-page">My Pages</a>
-            </li>
-        </ul>
-    </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom text-custom">
+    <div class="container">
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item ">
+                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                </li>
+            </ul>
+        </div>
     </div>
-<div>
-    <h2>My Info</h2>
-    <form>
-        <input type="text" placeholder="First Name"></input>
-        <input type="text" placeholder="Last Name"></input>
-        <input type="email" placeholder="Email"></input>
-        <input type="password" placeholder="Password"></input>
-    </form>
-    <button type="submit" class="btn btn-primary">Uppdate my info</button>
-    <!--This button should open the fields of the above form which are hidden(.collapse) - uppdated info should be sent to the database -->
+</nav>
+<h1 class ="text-center"> My Page</h1>
 </div>
 <div>
-    <form method="post" action="">
-        <h2>Create an order</h2>
-        <input type="text" placeholder="location">
-        <input type="text" placeholder="user"> <!--behövs den här??-->
-        <input type="text" placeholder="order">
-        <button type="submit" class="btn btn-primary"> OK </button>
-    </form>
-    </div>
-<div>
-    <h2>My previous Orders</h2>
-    <ul class="list-group">
-        <li class="list-group-item">First item</li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-    </ul>>
-
+    <img src="icon_my_page.JPG"
+         style="height:150px" class="center">
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<p th:text="${session.firstname}">inloggad firstname</p>
+<div class="container">
+    <img src="" alt="">
+    <section class="text-custom text-center mb-4">
+        <h1>BÖRJA TREJDA</h1>
+        <div mt-5>
+            <button type="button" class="btn btn-primary mb-3" >Create Order </button>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary mb-3">View Performers</button>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary mb-3">Previous Orders</button>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary mb-3" >View Orders</button>
+        </div>
+    </section>
+</div>
+</div>
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+    <div class="container">
+        <p class="lead"> Copyright &copy; 2022 Trejd</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1 icon-black" ></i>
+        </a>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
-</div>
-</html>
+
+
