fixa så att medelrating sparas på användare i databasen

--- a/src/main/resources/templates/maketrejd.html
+++ b/src/main/resources/templates/maketrejd.html
@@ -10,7 +10,7 @@
 
     <h1 th:text="${user.firstName}"></h1>
 
-    <h3 th:text="'Medelpoäng ' + ${averageRating}"></h3>
+    <h3 th:text="'Medelpoäng ' + ${user.rating}"></h3>
 
     <div class="border">
         <img class="center" src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="400" width="auto">
