--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -1,8 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <!-- Required meta tags -->
-
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,11 +12,43 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Create user</title>
 </head>
 <body>
 <h1> Create ORder</h1>
 <p th:text="${session.firstname}">inloggad firstname</p>
+
+  <form action="" method="POST" th:object="${order}">
+
+    <select th:field="*{skillId}" class="form-select">
+      <option value="0" selected="selected">Choose skill</option>
+      <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
+
+    <textarea name="description" th:field="*{description}" placeholder="Describe your line of work..."></textarea>
+    <!--div th:if>
+      <label for="exampleDataList2" class="form-label">Add second skill</label>
+      <input class="form-control" list="datalistOptions" id="exampleDataList2" placeholder="Type to search...">
+      <datalist id="datalistOptions2">
+        <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
+    </datalist>
+</div-->
+
+    <label for="FormInput5" class="form-label">Location</label>
+    <input type="text" th:field="*{location}" class="form-control" id="FormInput5" placeholder="Get or type your location"><br>
+
+    <input type = "hidden" th:field="*{latitude}" id="latitude">
+    <input type = "hidden" th:field="*{longitude}" id="longitude">
+
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-3">Confirm</button>
+    </div>
+</form>
+<button onclick="getLocation()">Get your location</button>
+<button onclick="setLocation()">Set your location</button>
+<script src="/geoScript.js"></script>
+
+
+
+
 
 </body>
 </html>
