--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<h1> Create ORder</h1>
+<h1> Create Order</h1>
 <p th:text="${session.firstname}">inloggad firstname</p>
 
   <form action="" method="POST" th:object="${order}">
