--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
     <div class="container">
         <img src="/logo.png" alt="logo" width="200px" height="auto">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
@@ -35,36 +35,29 @@
     </div>
 </nav>
 
-
 <section class="bg-light text-custom p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
-    <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
-            <div>
+    <div class="container auto-center">
+                 <div>
                 <h1>BÖRJA TREJDA KOMPIS!</h1>
             </div>
             <form id="form1" action="/" method="post">
-                <div class="mb-3">
+                <div class="mb-2">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                <div class="mb-3">
+                <div class="mb-2">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" name="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button type="submit" form="form1" class="btn btn-primary">Log in</button>
+                <button type="submit" form="form1" class="btn btn-primary mt-3 mb-3">Log in</button>
                 <p>Glömt lösenord?</p>
-                <button type="submit" class="btn btn-secondary"id="button2">Create Account</button>
+                <button type="submit" class="btn btn-secondary mb-5" id="button2">Create Account</button>
 
             </form>
-
-        </div>
-        <img class="img-fluid w-50 d-none d-sm-block"
-             src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png"
-             alt="">
     </div>
 </section>
 
-<!-- THis is WHERE We CAN HAVE 3 of The Categories with a picture-->
+<!-- THis is WHERE We CAN HAVE 3 of The Categories with a picture
 <section class="p-5">
     <div class="container">
         <div class="row text-center g-4">
@@ -105,10 +98,10 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- new part / frequesntly asked questions-->
-<section id="question" class="p-5">
+<section id="question" class="p-5 mt-3">
     <div class="container">
         <h2 class="text-center mb-4">Frequently Asked Questions</h2>
         <div class="accordion accordion-flush" id="questions">
