--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -36,15 +36,24 @@
     </table>
 
     <!-- href="/maketrejd/{user.id}" -->
+    <form action="/orders" method="POST" th:object="${order}">
+<select th:name="skillId">
+        <option value="0" selected="selected">Choose skill you are looking for</option>
+        <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
 
+</select>
+        <button type="submit">Filter</button>
+    </form>
         <div th:each="user: ${users}"  th:value="${user.firstName}">
-            <a th:href="'/maketrejd/' + ${user.id}" >
+            <a th:if="${isFiltered}==true" th:href="'/maketrejd/' + ${user.id} + '/' + ${skillId}" >
             <div class="border">
                 <img src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="150" width="auto">
                 <span th:text="${user.firstName}">NAME</span>
                 <span th:text="${user.location}">LOcation</span>
+
             </div></a>
         </div>
+
 
 
 <h1>AND SO ON.......</h1>
