--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -4,6 +4,11 @@
   <!-- Required meta tags -->
 
   <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -11,19 +16,47 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Trejd</title>
 
 </head>
 <body>
-<h1> Create ORder</h1>
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
+  <div class="container">
+    <img src="/logo.png" alt="logo" width="200px" height="auto">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navmenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item ">
+          <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+        </li>
+        <li class="nav-item">
+          <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+        </li>
+        <li class="nav-item">
+          <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<h1 class ="text-center"> Create Order</h1>
+</div>
+<div>
+  <img src="order_icon.JPG"
+       style="height:150px" class="center">
+</div>
 <p th:text="${session.firstname}">inloggad firstname</p>
 
   <form action="" method="POST" th:object="${order}">
 
-    <select th:field="*{skillId}" class="form-select">
+    <select th:field="*{skillId}" class="form-select text-custom text-center ">
       <option value="0" selected="selected">Choose skill</option>
       <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
 
-    <textarea name="description" th:field="*{description}" placeholder="Describe your line of work..."></textarea>
+    <textarea class="form-select text-custom text-center " name="description" th:field="*{description}" placeholder="Describe your line of work..."></textarea>
     <!--div th:if>
       <label for="exampleDataList2" class="form-label">Add second skill</label>
       <input class="form-control" list="datalistOptions" id="exampleDataList2" placeholder="Type to search...">
@@ -31,23 +64,33 @@
         <option th:each="skills: ${skills}"  th:value="${skills.skillName}">
     </datalist>
 </div-->
-
-    <label for="FormInput5" class="form-label">Location</label>
-    <input type="text" th:field="*{location}" class="form-control" id="FormInput5" placeholder="Get or type your location"><br>
+    <div>
+    <label for="FormInput5" class="form-label text-center text-custom mb-4 "></label>
+    </div>
+    <input type="text" th:field="*{location}" class="form-control text-custom text-center " id="FormInput5" placeholder="Get or type your location"><br>
 
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
 
-    <div class="col-auto">
+    <div class="col-auto text-center text-custom">
       <button type="submit" class="btn btn-primary mb-3">Confirm</button>
     </div>
 </form>
-<button onclick="getLocation()">Get your location</button>
-<button onclick="setLocation()">Set your location</button>
+<div class="col-auto text-center text-custom">
+
+<button onclick="getLocation()"class="btn btn-secondary mb-3 text-center ">Get your location</button>
+<button onclick="setLocation()"class="btn btn-secondary mb-3 text-center">Set your location</button>
 <script src="/geoScript.js"></script>
+</div>
 
-
-
+<footer class="p-5 navbar-custom text-white text-center position-relative">
+  <div class="container">
+    <p class="lead"> Copyright &copy; 2022 Trejd</p>
+    <a href="#" class="position-absolute bottom-0 end-0 p-5">
+      <i class="bi bi-arrow-up-circle h1 icon-black" ></i>
+    </a>
+  </div>
+</footer>
 
 
 </body>
