--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Create user</title>
+    <title>My page</title>
 </head>
 
 <body>
@@ -57,16 +57,30 @@
     <section class="text-custom text-center mb-4">
         <h1>BÖRJA TREJDA</h1>
         <div mt-5>
-            <button type="button" class="btn btn-primary mb-3" >Create Order </button>
+            <a href="create-order">
+            <button href="create-order" type="button" class="btn btn-primary mb-3"  >Create Order </button>
+
+            </a>
         </div>
         <div>
+            <a href="orders">
+
             <button type="button" class="btn btn-primary mb-3">View Performers</button>
+            </a>
         </div>
         <div>
+            <a href="create-order">
+
             <button type="button" class="btn btn-primary mb-3">Previous Orders</button>
+            </a>
+
         </div>
         <div>
-            <button type="button" class="btn btn-primary mb-3" >View Orders</button>
+            <a href="offerlist">
+
+            <button type="button" class="btn btn-primary mb-3" >View Orders</button>            </a>
+            </a>
+
         </div>
     </section>
 </div>
