made all error disappear

--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -77,8 +77,8 @@
 
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
-    <input type="button" onclick="getLocation()" value="Get your location"></input>
-    <input type="button" onclick="setLocation()" value="Set your location"></input>
+    <input type="button" onclick="getLocation()" value="Get your location" class="btn btn-secondary mb-3 text-center "></input>
+    <input type="button" onclick="setLocation()" value="Set your location" class="btn btn-secondary mb-3 text-center "></input>
     <div class="col-auto">
 
     <div class="col-auto text-center text-custom">
@@ -88,8 +88,8 @@
 
 <div class="col-auto text-center text-custom">
 
-<button onclick="getLocation()"class="btn btn-secondary mb-3 text-center ">Get your location</button>
-<button onclick="setLocation()"class="btn btn-secondary mb-3 text-center">Set your location</button>
+<!--button onclick="getLocation()"class="btn btn-secondary mb-3 text-center ">Get your location</button>
+<button onclick="setLocation()"class="btn btn-secondary mb-3 text-center">Set your location</button-->
 <script src="/geoScript.js"></script>
 </div>
 
