--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -39,16 +39,16 @@
 </div>
 <div class="container text-custom mt-5">
 <form action="" method="post" class="mb-3" th:object="${user}">
-    <label for="FormInput1" class="form-label">First name</label>
+    <label for="FormInput1" class="form-label">Förnamn</label>
     <input type="text" th:field="*{firstName}" class="form-control" id="FormInput1" placeholder="First Name">
 
-    <label for="FormInput2" class="form-label">Last name</label>
+    <label for="FormInput2" class="form-label">Efter namn</label>
     <input type="text" th:field="*{lastName}" class="form-control" id="FormInput2" placeholder="Last name">
 
-    <label for="FormInput3" class="form-label">Email address</label>
+    <label for="FormInput3" class="form-label">E-post adress</label>
     <input type="email" th:field="*{email}" class="form-control" id="FormInput3" placeholder="name@example.com">
 
-    <label for="FormInput4" class="form-label">Password</label>
+    <label for="FormInput4" class="form-label">Lösenord</label>
     <input type="password" th:field="*{password}" class="form-control" id="FormInput4" placeholder="password">
 
     <label for="FormInput5" class="form-label">Location</label>
@@ -63,7 +63,7 @@
 <div class="mb-2">
     <label class="form-label">Skill</label>
     <select th:field="*{skillId}" class="form-select">
-        <option value="0" selected="selected">Choose skill</option>
+        <option value="0" selected="selected">Välj skill</option>
         <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}"></select>
 </div>
 <!--div th:if>
