--- a/src/main/resources/templates/viewOfferList.html
+++ b/src/main/resources/templates/viewOfferList.html
@@ -30,18 +30,22 @@
 
     </style>
 
-<table>
+<form action="/offerlist" method="POST" th:object="${order}">
+    <select th:name="skillId">
+        <option value="0" selected="selected">Choose skill you are looking for</option>
+        <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
 
-</table>
+    </select>
+    <button type="submit">Filter</button>
+</form>
 
-<!-- th:href="'/maketrejd/' + ${user.id}" -->
 
-<div th:each="order: ${users}"  th:value="${order.user.firstName}">
-    <a th:href="'/create/' + ${order.user.id}" >
+
+<div th:each="order: ${wishes}"  th:value="${order.user.firstName}">
+    <a th:if="${isFiltered}==true" th:href="'/maketrejd/' + ${order.user.id} + '/' + ${skillId}" >
         <div class="border">
             <img src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="150" width="auto">
             <span th:text="${order.user.firstName}">NAME</span>
-            <span th:text="${order.skill.skillName}">SKILL</span>
             <span th:text="${order.description}">DESCRIPTION</span>
         </div></a>
 </div>
