--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,7 +51,7 @@
                 </div>
                 <button type="submit" form="form1" class="btn btn-primary mt-3 mb-3">Log in</button>
                 <p>Glömt lösenord?</p>
-                <button type="submit" class="btn btn-secondary mb-5" id="button2">Create Account</button>
+                <a href="/create-user"><input type="button" class="btn btn-secondary mb-5" id="button2" value="Create Account"></input></a>
 
             </form>
     </div>
