made changes in everything...again :)

--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -67,10 +67,12 @@
     </div>
     <!-*******************************IF NO PARAMTERAR ********************************************** ->
     <div th:if="${performer}==null" class="text-custom text-center">
-    <select th:field="*{skillId}" class="form-select text-custom text-center ">
-      <option value="0" selected="selected">Choose skill</option>
-      <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
-    </select>
+        <select th:field="*{skillId}" class="form-select" onchange="displayNewDropdown(1)">
+            <option value="0" selected="selected">Välj skill</option>
+            <optgroup th:each="cat : ${skills}"  th:label="${cat.key}">
+                <option th:each="skill : ${cat.value}"  th:value="${skill.id}" th:text="${skill.skillName}">
+                </option>
+        </select>
         <textarea name="description" class="form-control text-center" id="exampleFormControlTextarea1" rows="3" th:field="*{description}" placeholder="Describe your need..."></textarea>
     </div>
     <!-************************************  KÖRS ALLTID  ****************************************** ->
@@ -81,8 +83,8 @@
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
     <div class="text-custom text-center">
-    <input type="button" onclick="getLocation()" value="Get your location" class="btn btn-secondary mb-3 text-center"></input>
-    <input type="button" onclick="setLocation()" value="Set your location" class="btn btn-secondary mb-3 text-center"></input>
+    <input type="button" onclick="getLocation()" value="Get your location" class="btn btn-secondary mb-3 text-center" id="getLoc"></input>
+    <input type="button" onclick="setLocation()" value="Set your location" class="btn btn-secondary mb-3 text-center" id="setLoc"></input>
     </div>
     <!-******************************************************************************** ->
     <div class="col-auto">
@@ -108,6 +110,6 @@
     </a>
   </div>
 </footer>
-
+<script src="/geoScript.js"></script>
 </body>
 </html>
