--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/XSL/Transform">
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,14 +40,14 @@
                  <div>
                 <h1>BÖRJA TREJDA, KOMPIS!</h1>
             </div>
-            <form id="form1" action="/" method="post">
+            <form id="form1" action="/" method="post" th:object="${user}">
                 <div class="mb-2">
-                    <label for="exampleInputEmail1" class="form-label">E-post adress</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="exampleInputEmail1" class="form-label error">E-post adress</label><span th:if="${#fields.hasErrors('email')}">Field can't be empty</span>
+                    <input type="email" name="email" class="form-control" th:field="*{email}" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-2">
-                    <label for="exampleInputPassword1" class="form-label">Lösenord</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                    <label for="exampleInputPassword1" class="form-label error">Lösenord</label><span th:if="${#fields.hasErrors('password')}">Field can't be empty</span>
+                    <input type="password" name="password" th:field="*{password}" class="form-control" id="exampleInputPassword1">
                 </div>
                 <button type="submit" form="form1" class="btn btn-primary mt-3 mb-3">Logga In</button>
                 <p>Glömt lösenord?</p>
