made changes in everything...again and again :)

--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -83,8 +83,8 @@
     <input type = "hidden" th:field="*{latitude}" id="latitude">
     <input type = "hidden" th:field="*{longitude}" id="longitude">
     <div class="text-custom text-center">
-    <input type="button" onclick="getLocation()" value="Get your location" class="btn btn-secondary mb-3 text-center" id="getLoc"></input>
-    <input type="button" onclick="setLocation()" value="Set your location" class="btn btn-secondary mb-3 text-center" id="setLoc"></input>
+        <input type="button" onclick="getLocation()" value="Get your location" class="btn btn-secondary mb-3 text-center" id="getLoc"/>
+        <input type="button" onclick="setLocation()" value="Set your location" class="btn btn-secondary mb-3 text-center" id="setLoc"/>
     </div>
     <!-******************************************************************************** ->
     <div class="col-auto">
