--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -52,16 +52,16 @@
 </select>
         <button type="submit">Filtrera</button>
     </form>
-        <div th:each="user: ${users}"  th:value="${user.firstName}">
-            <a th:if="${isFiltered}==true" th:href="'/maketrejd/' + ${user.id} + '/' + ${skillId}" >
+        <div th:each="per: ${performers}">
+            <a th:if="${isFiltered}==true" th:href="'/maketrejd/' + ${per.id} + '/' + ${skillId}" >
             <div class="border">
                 <img src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="150" width="auto">
-                <div><span th:text="'Namn: '+${user.firstName}">Namn</span></div>
-                <div><span th:text="'Ort: '+${user.location}">Location</span></div>
-                <div><span th:text="'Rating: '+${user.rating}">Betyg</span></div>
-
-
-            </div></a>
+                <div><span th:text="'Namn: '+${per.firstName}">Namn</span></div>
+                <div><span th:text="'Ort: '+${per.location}">Location</span></div>
+                <div><span th:text="'Rating: '+${per.rating}">Betyg</span></div>
+                <div><span th:text="'ID: '+${per.id}">Betyg</span></div>
+            </div>
+            </a>
         </div>
 
 <h1>Klicka för flera utförare</h1>
