--- a/src/main/resources/templates/viewOfferList.html
+++ b/src/main/resources/templates/viewOfferList.html
@@ -52,5 +52,8 @@
 
 
 <h1>AND SO ON.......</h1>
+<div class="col-auto text-center text-custom">
+    <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+</div>
 </body>
 </html>
