--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
   <link rel="stylesheet" href="/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,19 +30,19 @@
     <div class="collapse navbar-collapse" id="navmenu">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item ">
-          <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+          <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
         </li>
         <li class="nav-item">
-          <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+          <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
         </li>
         <li class="nav-item" >
-          <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+          <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
         </li>
       </ul>
     </div>
     </div>
 </nav>
-
+<section>
 <h1 class ="text-center"> Create Order</h1>
 </div>
 <div th:if="${performer}!=null">
@@ -92,7 +93,10 @@
     </div>
     </div>
 </form>
-
+    <div class="col-auto text-center text-custom">
+        <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+    </div>
+</section>
 <div class="col-auto text-center text-custom">
 
 <!--button onclick="getLocation()"class="btn btn-secondary mb-3 text-center ">Get your location</button>
