--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Trejd</title>
 </head>
 <body>
@@ -16,19 +17,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
     <div class="container">
         <img src="/logo.png" alt="logo" width="200px" height="auto">
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
             <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item ">
-                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                    <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                    <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
                 </li>
             </ul>
         </div>
