--- a/src/main/resources/templates/updateuserinfo.html
+++ b/src/main/resources/templates/updateuserinfo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>User Info</title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -43,15 +43,16 @@
 <form action="" method="post" class="mb-3" th:object="${user}">
     <label for="FormInput1" class="form-label">Förnamn</label>
     <input type="text" th:field="*{firstName}" class="form-control" id="FormInput1" placeholder="First Name">
-
+    <input type="hidden"  th:field="*{id}" >
     <label for="FormInput2" class="form-label">Efter namn</label>
     <input type="text" th:field="*{lastName}" class="form-control" id="FormInput2" placeholder="Last name">
 
     <label for="FormInput3" class="form-label">E-post adress</label>
     <input type="email" th:field="*{email}" class="form-control" id="FormInput3" placeholder="name@example.com">
 
-    <label for="FormInput4" class="form-label">Lösenord</label>
-    <input type="password" th:field="*{password}" class="form-control" id="FormInput4" placeholder="password">
+    <input type = "hidden" th:field="*{password}" >
+   <!-- <label for="FormInput4" class="form-label">Lösenord</label>
+    <input type="password" th:field="*{password}" class="form-control" id="FormInput4" placeholder="password"> -->
 
     <label for="FormInput5" class="form-label">Location</label>
     <input type="text" th:field="*{location}" class="form-control" id="FormInput5" placeholder="Get or type your location"><br>
@@ -76,7 +77,7 @@
     </datalist>
 </div-->
     <div class="col-auto">
-        <button type="submit" class="btn btn-primary mb-3">Confirm</button>
+        <button type="submit" class="btn btn-primary mb-3">Update My Info</button>
     </div>
 </form>
     <div class="col-auto text-center text-custom">
