--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Orders</title>
 </head>
 <body>
@@ -22,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item ">
-                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                    <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                    <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
                 </li>
             </ul>
         </div>
@@ -67,6 +68,10 @@
 <h1>Klicka för flera utförare</h1>
         </div>
   </div>
+    <div class="col-auto text-center text-custom">
+        <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+    </div>
+    </div>
 </section>
 <section>
 <footer class="p-5 navbar-custom text-white text-center position-relative">
