Alla knappar funkar - allt funkar fortfarande.

--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -66,6 +66,7 @@
             <button type="button" class="btn btn-primary mb-3">Se utförare</button>
             </a>
         </div>
+        <!--
         <div>
             <a href="create-order">
 
@@ -73,6 +74,7 @@
             </a>
 
         </div>
+        -->
         <div>
             <a href="offerlist">
 
@@ -81,11 +83,11 @@
         </div>
         <div>
             <a href="/updateuserinfo">
-                <button type="button" class="btn btn-primary mb-3" >Uppdatera Mina Uppgifter </button>
+                <button type="button" class="btn btn-primary mb-3" >Inställningar</button>
             </a>
         </div>
         <div class="col-auto text-center text-custom">
-            <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+            <a href="/logout" class="btn btn-secondary mb-3">Logga ut</a>
         </div>
     </section>
 </div>
