--- a/src/main/resources/templates/trejd-confirm.html
+++ b/src/main/resources/templates/trejd-confirm.html
@@ -51,7 +51,8 @@
 </div>
 
 <div class="col-auto text-center text-custom">
-    <a th:href="'/trejdInfo/' + ${trejd.id}" class="btn btn-secondary mb-3">Till Review</a>
+    <a th:href="'/trejdInfo/' + ${trejd.id}" class="btn btn-primary mb-3">Till Review</a>
+    <span onclick="history.go(-5)" class="btn btn-secondary mb-3">Hem</span>
 </div>
 
 <footer class="p-5 navbar-custom text-white text-center position-relative">
