--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -69,7 +69,8 @@
         </div>
   </div>
     <div class="col-auto text-center text-custom">
-        <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+        <span th:if="${isFiltered!=true}" onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+        <span th:if="${isFiltered==true}" onclick="history.go(-2)" class="btn btn-secondary mb-3">Back</span>
     </div>
     </div>
 </section>
