--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Orders</title>
 </head>
 <body>
@@ -22,27 +23,26 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item ">
-                    <a href="#home" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                    <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                    <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+</div>
 
-<section class="bg-light text-custom p-5 p-lg-0 pt-lg-5 text-center text-sm-start mb-3">
-    <div class="container auto-center m-4">
-        <div>
-            <h1>Tjänster och Utförare</h1>
-        </div>
+<h1 class = "text-custom text-center p-4" >Tjänster och Utförare</h1>
 
-            <!-- href="/maketrejd/{user.id}" -->
-    <form action="/orders" method="POST" th:object="${order}">
+</div>
+<section class="bg-light text-custom text-center mb-3">
+    <!-- href="/maketrejd/{user.id}" -->
+    <form action="/orders" method="POST" th:object="${order}"class="text-custom text-center">
 
 <select th:name="skillId">
         <option value="0" selected="selected">Välj Tjänst</option>
@@ -50,23 +50,26 @@
         <option th:each="skill: ${skills}"  th:value="${skill.id}" th:text="${skill.skillName}">
 
 </select>
-        <button type="submit">Filtrera</button>
+        <div>
+        <button type="submit" class="btn btn-primary mb-6 mt-2">Filtrera</button>
+        </div>
     </form>
-        <div th:each="user: ${users}"  th:value="${user.firstName}">
+        <div th:each="user: ${users}"  th:value="${user.firstName}" class="text-custom text-center">
             <a th:if="${isFiltered}==true" th:href="'/maketrejd/' + ${user.id} + '/' + ${skillId}" >
-            <div class="border">
+            <div class="border text-custom text-center" >
                 <img src="https://toppng.com/uploads/preview/instagram-default-profile-picture-11562973083brycehrmyv.png" Height="150" width="auto">
-                <div><span th:text="'Namn: '+${user.firstName}">Namn</span></div>
+                <div><h4><span th:text="'Namn: '+${user.firstName}">Namn</span></h4></div>
                 <div><span th:text="'Ort: '+${user.location}">Location</span></div>
                 <div><span th:text="'Rating: '+${user.rating}">Betyg</span></div>
 
 
             </div></a>
-        </div>
 
-<h1>Klicka för flera utförare</h1>
-        </div>
   </div>
+    <div class="text-center text-custom">
+        <span onclick="history.back()" class="btn btn-secondary mb-6 mt-3">Back</span>
+    </div>
+    </div>
 </section>
 <section>
 <footer class="p-5 navbar-custom text-white text-center position-relative">
